[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/portcullis.png" type="Texture" id=1]
[ext_resource path="res://Scenes/TriggerDoor.gd" type="Script" id=2]
[ext_resource path="res://Assets/sfx/door_open.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 24 )

[sub_resource type="AudioStreamRandomPitch" id=2]
audio_stream = ExtResource( 3 )
random_pitch = 1.5

[node name="TriggerDoor" type="StaticBody2D"]
collision_layer = 4
collision_mask = 27
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="portcullis" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="OpenTimer" type="Timer" parent="."]
one_shot = true

[node name="OpenSound" type="AudioStreamPlayer" parent="."]
stream = SubResource( 2 )
volume_db = 1.0
[connection signal="timeout" from="OpenTimer" to="." method="_on_OpenTimer_timeout"]
